# ai-playground

./: .gitignore  README.md  model.py  pyproject.toml  sample.py  train.py
audio-huggingface/: unit1.ipynb  unit2.ipynb
cs-190I/: backprop.py
data/shakespeare/: dataset.py
deepmapper/: .gitignore  README.md  model.py  pytorch-mnist-resnet18-shuffle-demo.ipynb  test.py  train.py
gpt2/: model.py
gpt2/data/shakespeare/: dataset.py
zero_to_hero/: README.md  playground.ipynb
zero_to_hero/2 - makemore/: build_makemore_mlp.ipynb
