[project]
name = "ai-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets[audio]>=3.4.1",
    "gradio>=4.44.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numba>=0.53.1",
    "numpy<2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "transformers>=4.49.0",
]
